# apps.home.crash-viewer

./: CMakeLists.txt  org.tizen.crash-viewer.efl  org.tizen.crash-viewer.manifest  org.tizen.crash-viewer.xml
data/: CMakeLists.txt  crash-viewer.edc
packaging/: org.tizen.crash-viewer.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+9 more)
src/: _delete.c  _delete.h  _list.c  _list.h  _logic.c  _logic.h  _popup.c  _popup.h  _util_efl.c  _util_efl.h  _util_log.h  crash-viewer.c  crash-viewer.h  format
